--- a/index-snake.html
+++ b/index-snake.html
@@ -10,6 +10,7 @@
     <title>Snake</title>
 </head>
 <body>
+    <h1>SNAKE SNAKESSSSssssss</h1>
     <canvas id="snake" width="512" height="512"></canvas>
 </body>
 
